--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,5 @@
 *.pyc
 *.coverage
 *.cache
-                               
+timeseries/#timeseries.py#
+timeseries/.#timeseries.py                               
