--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,3 @@
 [pytest]
 #addopts = --cov-report term-missing --cov timeseries
-#addopts = --cov-report term-missing --cov tsbtreedb/similarity.py tsbtreedb/testNearestPoint.py 
-#addopts = --cov-report term-missing --cov tsbtreedb/similarity.py tests/testNearestPoint.py 
-addopts = --cov-report term-missing --cov ../tsbtreedb/similarity.py testNearestPoint.py 
+addopts = --cov-report term-missing --cov ../tsbtreedb testNearestPoint.py 
