--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,3 @@
 [pytest]
 #addopts = --cov-report term-missing --cov timeseries
-addopts = --cov-report term-missing --cov ../tsbtreedb testNearestPoint.py 
+addopts = --cov-report term-missing --cov tsbtreedb tests/testNearestPoint.py 
