added scipy to travis config

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ before_install:
     - pip install pytest pytest-cov
     - pip install coveralls
     - pip install portalocker
+    - pip install scipy
 script:
     - py.test
 after_success:
