--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,8 @@ python:
 before_install:
     - pip install pytest pytest-cov
     - pip install coveralls
-    - pip install portalocker
+    - pip install portalocker 
+    - pip install scipy
 script:
     - py.test
 after_success:
