--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,9 @@ before_install:
     - pip install coveralls
     - pip install portalocker 
     - pip install scipy
+    - make sdist
+    - pip install ./dist/rbtree-0.1.tar.gz
+    - pip install ./dist/timeseries-0.1.tar.gz
 script:
     - py.test
 after_success:
