--- a/src/dbserver/dbserver.service
+++ b/src/dbserver/dbserver.service
@@ -1,15 +1,21 @@
 [Unit]
-Description=Socket Server for Time Series Data	
+Description=Socket Server for Time Series Data
 After=syslog.target
 
 [Service]
 Type=simple
-User=node
-Group=node
-WorkingDirectory=/var/dbserver/dbserver
-ExecStart=/var/dbserver/dbserver/server.py
+User=dbserver
+Group=dbserver
+WorkingDirectory=/var/dbserver/
+ExecStart=/usr/bin/python3 /var/dbserver/start_dbserver.py
 StandardOutput=syslog
 StandardError=syslog
 
 [Install]
 WantedBy=multi-user.target
+
+
+
+
+
+
