--- a/src/timeseries/Makefile
+++ b/src/timeseries/Makefile
@@ -1,3 +1,3 @@
 sdist:
-	pip install -r requirements.txt
-	python setup.py egg_info -e ../../dist sdist -d ../../dist
+	pip3 install -r requirements.txt
+	python3 setup.py egg_info -e ../../dist sdist -d ../../dist
