--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 language: python
 python:
     - "3.5"
+sudo: required
 before_install:
     - pip install pytest pytest-cov
     - pip install coveralls
