--- a/.travis.yml
+++ b/.travis.yml
@@ -6,11 +6,11 @@ services:
     - docker
 before_install:
     - docker build -t test-image .
-    - docker run -d --name test test-image
-    - docker exec test init.sh
+    - docker run -d --name test_container test-image
     - docker ps -a
+    - docker exec test_container init.sh
 script:
-    - docker exec test py.test
+    - docker exec test_container py.test
 after_success:
     - docker rm -f test
     - coveralls
