--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ services:
     - docker
 before_install:
     - docker build -t test-image .
-    - docker run -d --name test_container test-image
+    - docker run -d --name test_container test-image bash
     - docker ps -a
     - docker exec test_container init.sh
 script:
