--- a/.travis.yml
+++ b/.travis.yml
@@ -5,12 +5,17 @@ sudo: required
 services:
     - docker
 before_install:
-    - docker build -t test-image .
-    - docker run -d --name test_container test-image /bin/bash
-    - docker ps -a
-    - docker exec test_container init.sh
+    - pip install pytest pytest-cov
+    - pip install coveralls
+    - pip install portalocker
+    - pip install scipy
+    - pip install flask Flask_SQLAlchemy SQLAlchemy psycopg2
+    - make sdist
+    - pip install ./dist/rbtree-0.1.tar.gz
+    - pip install ./dist/timeseries-0.1.tar.gz
+    - pip install ./dist/dbserver-1.0.tar.gz
+    - sudo sh ./init.sh
 script:
-    - docker exec test_container py.test
+    - py.test
 after_success:
-    - docker rm -f test
     - coveralls
